--- a/Changes.txt
+++ b/Changes.txt
@@ -19,7 +19,7 @@ StickyExplosive - Дальность броска увеличена, можно
 Увеличена скорость перемещения со всеми штурмовыми винтовками и пистолетами-пулемётами.
 
 Дополнительно:
-\gr_stamina 	    - Отключает или выключает трату стамины при беге и прыжках.
+\gr_stamina 	    - Множитель траты стамины при беге и прыжках.
 \gr_team_binoculars - Когда игрок команды метит через бинокль вражеского игрока, то вся команда видит его.
 
 Косметика:
